# fastapi-mongodb-base-project

./: .env  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cookiecutter.json  docker-compose.yml  logging.ini  pyproject.toml  setup.cfg
.github/workflows/: codeql-analysis.yml  docker-image.yml
app/: main.py
app/api/database/: connect.py
app/api/database/excute/: predict.py
app/api/database/models/: predict.py
app/api/helpers/: convert_model2dict.py
app/api/responses/: base.py
app/api/routes/: api.py  predict.py
app/api/services/: predict_service.py
app/core/: config.py  constant.py  messages_api.py
app/frontend/static/css/: main.css
app/frontend/templates/: index.html
app/logger/: logger.py
app/tests/test_services/: predict.py  predict_csv.py
app/utils/: config.py  format
{{cookiecutter.project_slug}}/: .dockerignore  .gitignore  .gitlab-ci.yml  .pylintrc  Dockerfile  README.md  crontab_call_schedule.py  docker-compose.yml  pyproject.toml  run_crontab.py  setup.cfg  template.env
{{cookiecutter.project_slug}}/.github/: dependabot.yml
{{cookiecutter.project_slug}}/.github/workflows/: dev-docker-deploy.yml  main-docker-deploy.yml  pr-docker-build.yml
{{cookiecutter.project_slug}}/app/: __init__.py  main.py
{{cookiecutter.project_slug}}/app/api/: __init__.py
{{cookiecutter.project_slug}}/app/api/database/: __init__.py  connect.py
{{cookiecutter.project_slug}}/app/api/database/execute/: __init__.py  base_execute.py  exercise.py  exercise_trainer.py  user.py  user_exercise.py  user_information.py
{{cookiecutter.project_slug}}/app/api/database/migrate/: __init__.py  init_super_user.py
{{cookiecutter.project_slug}}/app/api/database/models/: auth.py  base.py  exercise.py  exercise_trainer.py  token.py  user.py  user_exercise.py  user_information.py
{{cookiecutter.project_slug}}/app/api/errors/: __init__.py  error_message.py  http_error.py  validation_error.py
{{cookiecutter.project_slug}}/app/api/helpers/: __init__.py  convert_model2dict.py  dict2model.py  download.py  model2dict.py
{{cookiecutter.project_slug}}/app/api/responses/: __init__.py  base.py  model2reponse.py  response_examples.py
{{cookiecutter.project_slug}}/app/api/routes/: __init__.py  api.py  authentication.py  exercise_route.py  user_route.py
{{cookiecutter.project_slug}}/app/api/serializers/: __init__.py
{{cookiecutter.project_slug}}/app/api/services/: __init__.py  authentication_service.py  user_service.py
{{cookiecutter.project_slug}}/app/core/: __init__.py  config.py  constant.py  logging.py
{{cookiecutter.project_slug}}/app/frontend/templates/: index.html
{{cookiecutter.project_slug}}/app/logger/: logger.py
{{cookiecutter.project_slug}}/app/ml/: __init__.py
{{cookiecutter.project_slug}}/app/ml/base_model/: __init__.py  base.py
{{cookiecutter.project_slug}}/app/ml/data_loader/: __init__.py  load_from_directory.py
{{cookiecutter.project_slug}}/app/ml/data_loader/tfrecord/: load.py  write.py
{{cookiecutter.project_slug}}/app/ml/figures/: __init__.py
{{cookiecutter.project_slug}}/app/ml/preprocessing/: __init__.py
{{cookiecutter.project_slug}}/app/ml/trainers/: __init__.py
{{cookiecutter.project_slug}}/app/tests/test_api/: __init__.py  test_authentication.py  test_user_information.py
{{cookiecutter.project_slug}}/app/tests/test_services/: __init__.py
{{cookiecutter.project_slug}}/app/utils/: format  helpers.py  lint  logger.py  test  test-cov-html  utils.py
{{cookiecutter.project_slug}}/configs/: install_oracle.sh
{{cookiecutter.project_slug}}/docker/: Dockerfile  Dockerfile_GPU
