[tool.poetry]
name = "fastapi-keiba-app"
version = "0.0.0"
description = "Base code fastapi"
authors = ["BAP"]
license = "BAP"

[tool.poetry.dependencies]
python = "^3.7.1"
uvicorn = "^0.13.3"
fastapi = "^0.61.1"
python-slugify = "^4.0"
Unidecode = "^1.1"
loguru = "^0.5.1"
pymongo = "^3.11.4"
pandas = "^1.2.4"
joblib = "^1.0.1"
category-encoders = "^2.2.2"
python-multipart = "^0.0.5"
Jinja2 = "^3.0.0"
aiofiles = "^0.6.0"
gdown = "^3.13.0"
PyYAML = "^5.4.1"
python-crontab = "^2.5.1"
python-dotenv = "^0.17.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.0"
autoflake = "^1.4"
wemake-python-styleguide = "^0.15.0"
mypy = "^0.790"
flake8-fixme = "^1.1"
pytest = "^6.1"
pytest-cov = "^2.10"
pytest-asyncio = "^0.14.0"
pytest-env = "^0.6.2"
docker = "^4.3"
httpx = "^0.16.1"
asgi-lifespan = "^1.0.1"
autopep8 = "^1.5.7"

[tool.isort]
profile = "black"
src_paths = ["app", "tests"]
combine_as_imports = true

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = "error"
addopts = '''
  --strict-markers
  --tb=short
  --cov=app
  --cov=tests
  --cov-branch
  --cov-report=term-missing
  --cov-report=html
  --cov-report=xml
  --no-cov-on-fail
  --cov-fail-under=100
'''
env = ["SECRET_KEY=secret"]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
