[tool.poetry]
name = "app"
version = "0.0.1"
description = ""
authors = ["Khánh Pluto"]
license = "Khánh Pluto"

[tool.poetry.dependencies]
python = "^3.7.1"
uvicorn = "^0.13.3"
fastapi = "^0.65.2"
python-slugify = "^4.0"
Unidecode = "^1.1"
loguru = "^0.5.1"
pymongo = {extras = ["srv"], version = "^3.12.1"}
category-encoders = "^2.2.2"
python-multipart = "^0.0.5"
aiofiles = "^0.6.0"
PyYAML = "^5.4.1"
python-dotenv = "^0.17.1"
wget = "^3.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-crontab = "^2.6.0"
Jinja2 = "^3.0.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.0"
autoflake = "^1.4"
wemake-python-styleguide = "^0.15.0"
mypy = "^0.790"
flake8-fixme = "^1.1"
pytest = "^6.1"
pytest-cov = "^2.10"
pytest-asyncio = "^0.14.0"
pytest-env = "^0.6.2"
docker = "^4.3"
httpx = "^0.16.1"
asgi-lifespan = "^1.0.1"
autopep8 = "^1.5.7"

[tool.isort]
profile = "black"
src_paths = ["app", "tests"]
combine_as_imports = true

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = "error"
addopts = '''
  --strict-markers
  --tb=short
  --cov=app
  --cov=tests
  --cov-branch
  --cov-report=term-missing
  --cov-report=html
  --cov-report=xml
  --no-cov-on-fail
  --cov-fail-under=100
'''
env = ["SECRET_KEY=secret"]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
