[tool.poetry]
name = "app"
version = "0.0.1"
description = ""
authors = ["Khánh Pluto"]
license = "Khánh Pluto"

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.16.2"
uvicorn = "^0.20.0"
fastapi = "^0.92.0"
python-slugify = "^8.0.1"
Unidecode = "^1.3.6"
loguru = "^0.6.0"
pymongo = {extras = ["srv"], version = "^4.3.3"}
aiofiles = "^23.1.0"
PyYAML = "^6.0"
python-dotenv = "^1.0.0"
wget = "^3.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
Jinja2 = "^3.1.2"
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pyflakes = "2.3.0"
flake8 = "3.9.1"
wemake-python-styleguide = "^0.17.0"
autoflake = "1.4"
mypy = "^1.0.1"
flake8-fixme = "^1.1.1"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.3"
pytest-env = "^0.8.1"
docker = "^6.0.1"
httpx = "^0.23.3"
asgi-lifespan = "^2.0.0"
autopep8 = "1.5.7"

[tool.pylint]
line-length = 120

[tool.isort]
profile = "black"
src_paths = ["app", "tests"]
combine_as_imports = true

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = "error"
addopts = '''
  --strict-markers
  --tb=short
  --cov=app
  --cov=tests
  --cov-branch
  --cov-report=term-missing
  --cov-report=html
  --cov-report=xml
  --no-cov-on-fail
  --cov-fail-under=70
'''
env = ["SECRET_KEY=secret"]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
