[tool.poetry]
name = "app"
version = "0.0.1"
description = ""
authors = ["Khánh Pluto"]
license = "Khánh Pluto"

[tool.poetry.dependencies]
python = "^3.11"
pylint = "^3.0.2"
python-slugify = "^8.0.1"
Unidecode = "^1.3.7"
loguru = "^0.7.2"
pymongo = { extras = ["srv"], version = "^4.5.0" }
aiofiles = "^23.2.1"
PyYAML = "^6.0.1"
python-dotenv = "^1.0.0"
wget = "^3.2"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
Jinja2 = "^3.1.2"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
pytest-env = "^1.1.0"
httpx = "^0.25.0"
orjson = "^3.9.10"
aiohttp = "^3.8.6"
pytest-sugar = "^0.9.7"
hypercorn = { extras = ["trio"], version = "^0.15.0" }
gunicorn = "^21.2.0"
python-multipart = "^0.0.6"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
poetry-plugin-up = "^0.7.0"
pydantic = "^2.4.2"

[tool.poetry.dev-dependencies]
black = "^23.10.1"
isort = "^5.12.0"
pyflakes = "3.1.0"
flake8 = "6.1.0"
wemake-python-styleguide = "^0.18.0"
autoflake = "2.2.1"
mypy = "^1.6.1"
flake8-fixme = "^1.1.1"
docker = "^6.1.3"
asgi-lifespan = "^2.1.0"
autopep8 = "2.0.4"

[tool.pylint]
line-length = 120

[tool.isort]
profile = "black"
src_paths = ["app", "tests"]
combine_as_imports = true

[tool.pytest.ini_options]
testpaths = "app/tests"
filterwarnings = '''
    ignore::DeprecationWarning
'''
addopts = '''
  --strict-markers
  --tb=short
  --cov=app
  --cov=tests
  --cov-branch
  --cov-report=term-missing
  --cov-report=html
  --cov-report=xml
  --no-cov-on-fail
  --cov-fail-under=70
'''
env = ["SECRET_KEY=secret"]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
